--- a/src/app/features/proofs/poc/proof-poc.component.html
+++ b/src/app/features/proofs/poc/proof-poc.component.html
@@ -3,11 +3,16 @@
   <div class="container mt-5">
     <div class="row mb-3">
       <div class="col-12">
-        <h4>PROOF OF CONTINUITY (POC)</h4>
-        <p>Prove the history of a given data packet through blockchain</p>
+        <div class="row">
+          <div class="mr-1 ml-3 "><span  (click)="goBack()">   <i class="fas fa-angle-left clickableAwesomeFont" style="font-size: 30px;"></i></span></div>
+       <div>
+          <h4>PROOF OF CONTINUITY (POC)</h4>
+          <p>Prove the history of a given data packet through blockchain</p>
       </div>
-      <div class="col-12 mt-2">
-        <ul class="p-2 ml-2">
+        </div>
+      </div>
+      <div class="col-12 mt-2 ml-3">
+        <ul class="p-2 ml-4">
           <li class="text-muted m-0" style="font-size: 14px;">Click on a <b>node</b> to view and verify it's transaction information.</li>
           <li class="text-muted" style="font-size: 14px;">Click on a <b>edge</b> to verify it's associated backlink.</li>
         </ul>
