TRAC-4855 hide trasacion details from poc

--- a/src/app/features/proofs/poc/proof-poc.component.html
+++ b/src/app/features/proofs/poc/proof-poc.component.html
@@ -76,7 +76,7 @@
             Timestamp
           </div>
           <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
-            {{selectedItem.Identifier}}
+            {{selectedItem.Timestamp| date: 'medium'}}
           </div>
         </div>
 
