--- a/src/app/features/proofs/poc/proof-poc.component.html
+++ b/src/app/features/proofs/poc/proof-poc.component.html
@@ -14,7 +14,7 @@
       <div class="col-12 mt-2 ml-3">
         <ul class="p-2 ml-4">
           <li class="text-muted m-0" style="font-size: 14px;">Click on a <b>node</b> to view and verify it's transaction information.</li>
-          <li class="text-muted" style="font-size: 14px;">Click on a <b>edge</b> to verify it's associated backlink.</li>
+          <!-- <li class="text-muted" style="font-size: 14px;">Click on a <b>edge</b> to verify it's associated backlink.</li> -->
         </ul>
       </div>
     </div>
